# racosfera

./: .gitignore  README.md  ecohome.py  multiecohome.py  pyproject.toml  requirements  requirements.txt  voltka.ipynb
.streamlit/: config.toml
docs/: thoughts.md
