[tool.poetry]
name = "racosfera"
version = "0.1.0"
description = "un raco to play with ecosystems"
authors = ["pol.monso <pol.monso@somenergia.coop>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7"
streamlit = "^1.22.0"
numpy = "^1.24.3"
scipy = "^1.10.1"
autograd = "^1.5"
plotly = "^5.14.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
streamlit-autorefresh = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
